bin_PROGRAMS = \
  afner 

afner_SOURCES = \
	feature_extraction.cpp \
	main.cpp \
	ner.cpp \
	tokenDeco.cpp \
	feature_functions.cpp \
	feature_handler.cpp \
	maxent.cpp \
  suffixtree.cpp \
  tokeniser.cpp \
	list_handler.cpp \
  entity_tag.cpp \
  regex_handler.cpp \
  feature_functions.h \
  feature_extraction.h \
	feature_handler.h \
  iterator.h \
  maxent.h \
  ner.h \
  suffixtree.h \
  tokenDeco.h \
  tokeniser.h \
	list_handler.h \
  xml_string.h \
  entity_tag.h \
  regex_handler.h
